--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac-book-pro</title>
+    <!-- css bootstrap link -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- css style link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -81,12 +83,14 @@
             </div>
         </section>
     </main>
+    <!-- total price -->
     <footer class="container">
         <hr>
         <h1 class="text-center">Total: $<span id="total-after-promo">1299</span> </h1>
     </footer>
-
+    <!-- js file boot -->
     <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- js file for calculation -->
     <script src="js/macbook.js"></script>
 </body>
 
